--- a/conocimientos/index.html
+++ b/conocimientos/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Conocimientos en varias tecnologías</title>
+<title>Proyectos y conocimientos</title>
 <link rel="stylesheet" href="css/estilo.css" media="screen and (max-width:6400px) and (min-width:1200px)" />
 <link rel="stylesheet" href="css/tablet.css" media="screen and (max-width:1200px) and (min-width:820px)" />
 <link rel="stylesheet" href="css/movil.css" media="screen and (max-width:820px) and (min-width:1px)" />
@@ -84,16 +84,13 @@
                 }
                 document.getElementById("resultado").innerHTML = cadena;
 
-          //console.log("lenguajes: "+datos[2].lenguages.length);
-          var datoslang = datos[2].lenguages.length;
-          for(var r = 0; r<=datoslang-1;r++){
-            //console.log("lenguaje: "+datos[2].lenguages[r].nombre);
-            //console.log("cantidad: "+datos[2].lenguages[r].sistemas.length);
-            var datosSis = datos[2].lenguages[r].sistemas.length;
-            for(var t=0; t<=datosSis-1; t++){
-              console.log("sistema: "+datos[2].lenguages[r].sistemas[t].tooltip);
+            var datoslang = datos[2].lenguages.length;
+            for(var r = 0; r<=datoslang-1;r++){
+                var datosSis = datos[2].lenguages[r].sistemas.length;
+                for(var t=0; t<=datosSis-1; t++){
+                    console.log("sistema: "+datos[2].lenguages[r].sistemas[t].tooltip);
+                }
             }
-          }
             });
         </script>
         <div id="pagina">
