--- a/conocimientos/proyectos/sistema/index.html
+++ b/conocimientos/proyectos/sistema/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="utf-8">
-<!--<title>Conocimientos y experiencias en PHP</title>-->
 <div id="titulo_pag"></div>
 <link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen and (max-width:6400px) and (min-width:820px)"/>
 <link rel="stylesheet" type="text/css" href="css/tablet.css" media="screen and (max-width:820px) and (min-width:620px)"/>
@@ -32,7 +31,6 @@
         <div class="cuadro-superior">
         <img src="../../../img/logo.png" class="logo">
 
-        <!--<p class="tittle">Proyectos acerca de PHP</p>-->
         <div id="titulo"></div>
       </div>
     </div>
@@ -64,7 +62,7 @@
             var nombreLang = "<p class='tittle'>"+title_info+datos[2].lenguages[id].nombre+"</p>";
             var tituloPag = "<title>"+subtitle_info+datos[2].lenguages[id].nombre+"</title>";
             var longitud = datos[2].lenguages[id].sistemas[idHijo].programa[0].descripciones.length - 1;
-
+            
             var nota = datos[2].lenguages[id].sistemas[idHijo].programa[0].nota;
             cadena += "<h1>"+datos[2].lenguages[id].sistemas[idHijo].programa[0].titulo+"</h1>";
             cadena += "<p class='text-principal'>"+datos[2].lenguages[id].sistemas[idHijo].programa[0].texto+"</p>";
@@ -79,7 +77,6 @@
                     cadena += "<div class='filaB'><img src='"+imagen+"'><p class='text2'>"+descripcion+"</p></div>";
                     filas = true;
                 }
-                //cadena += "<div class='separa2'></div>";
             }
             if (nota != ""){
                 cadena += "<div class='cuadro-nota'><p class='nota'><strong>Nota</strong>: "+nota+"</p></div>";
@@ -87,6 +84,8 @@
             document.getElementById("resultado").innerHTML = cadena;
             document.getElementById("titulo").innerHTML = nombreLang;
             document.getElementById("titulo_pag").innerHTML = tituloPag;
+
+            document.title = datos[2].lenguages[id].sistemas[idHijo].programa[0].titulo;
         });
 	</script>
 
