Update introduction page to be up to date

--- a/menu/index.html
+++ b/menu/index.html
@@ -72,8 +72,8 @@
             <h1 class="title-curso-txt" id="title_courses">Cursos</h1>
             <p class="des-curso" id="des_courses">En este apartado se mostraran los cursos que sigo día a día con el fin de prepárame más. Los cursos que mayormente sigo son www.platzi.com y www.video2brain.com</p><br/>
             <div class="curso">
-                <img src="img/coursera.jpg" class="curso-imagen"><br><br>
-                <a href="https://www.coursera.org/" target="_blank" class="link">https://www.coursera.org</a>
+                <img src="img/udemy.png" class="curso-imagen"><br><br>
+                <a href="https://www.udemy.com/" target="_blank" class="link">https://www.udemy.com/</a>
                 <p class="cursos" id="des_coursera">Coursera es una plataforma de educación virtual gratuita nacida en octubre de 2011 y desarrollada por académicos de la Universidad de Stanford con el fin de brindar oferta de educación masiva a la población, con cursos en inglés y otros idiomas como el español, francés, italiano y chino.</p>
             </div>
             <div class="curso2">
@@ -82,27 +82,27 @@
               <p class="cursos" id="des_platzi">Platzi es uno de los cursos que me ha ayudado a mejorar y conocer nuevas tecnologías y métodos de la programación, al igual veo de diferentes categorías como Marketing Online, Diseño web y Aplicaciones móviles.</p>
             </div>
             <div class="curso3">
-              <img src="img/video2brain.jpg" class="curso-imagen"><br><br>
-              <a href="http://video2brain.com/" target="_blank" class="link">http://video2brain.com/</a>
+              <img src="img/youtube.png" class="curso-imagen"><br><br>
+              <a href="https://www.youtube.com/" target="_blank" class="link">https://www.youtube.com/</a>
               <p class="cursos" id="des_video2brain">Video2Brain son cursos españoles en donde aprendí y sigo aprendiendo mucho acerca de diseño y programación, estos cursos siempre están actualizados al día de lo que se está usando.</p>
             </div>
         </div>
             <div class="box3">
               <div class="separador"></div>
-              <h1 id="title_free_time">Tiempos Libres</h1>
-              <p class="des-curso" id="free_time">Por otro lado también aprovecho del tiempo libre para leer y estar enterado de las innovaciones que pasa por todo el mundo y así mismo para prepararme de nuevos retos que enfrentaría en un futuro dado.</p><br/>
+              <h1 id="title_free_time">titulo de git</h1>
+              <p class="des-curso" id="free_time">Descripcion de los repositorios.</p><br/>
             </div>
 
             <div class="col1">
-              <img src="img/emol2.jpg" class="times-imagen">
-              <p class="tiempos" id="des_emol">Emol es una de las páginas de noticias más conocidas por el lado Chileno la cual me abarco de noticias que son sobre el tema acerca de tecnología y más.</p>
-              <a href="http://www.emol.com/" target="_blank" id="further_information_emol" class="times-link">Más Información</a>
+              <img src="img/github.jpg" class="times-imagen">
+              <p class="tiempos" id="des_emol">Primer bloque</p>
+              <a href="https://github.com/Gianni-A" target="_blank" id="further_information_emol" class="times-link">Texto del boton</a>
             </div>
 
             <div class="col2">
-              <img src="img/hipertextual2.jpg" class="times-imagen">
-              <p class="tiempos" id="des_hipertextual">hipertextual o antes conocido como ALT 1040 es una página española que muestra noticias de lo que está pasando en el mundo, mayormente leo noticias acerca de tecnología.</p>
-              <a href="http://hipertextual.com/" target="_blank" id="further_information_hpx" class="times-link2">Más Información</a>
+              <img src="img/gitlab.png" class="times-imagen">
+              <p class="tiempos" id="des_hipertextual">Segundo7 bloque</p>
+              <a href="https://gitlab.com/galvarado" target="_blank" id="further_information_hpx" class="times-link2">Texto del boton</a>
             </div>
         </div>
     </div>
@@ -138,7 +138,7 @@
         }
 
         const typewritered = new Typewriter('#typewriter', {
-            strings: ['Hello', 'World'],
+            strings: [''],
         });
 
         typewritered.typeString(entusiasta)
